# CaptainHook

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: BUILDER.md  DEVELOPMENT_LOG.md  TECHNICAL.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md
src/builder/: main.py
src/client/: main.py
src/client/core/: cache.py  config.py  persistence.py  platform.py  security.py  siren.py  tui.py  wraith.py
src/client/modules/: browser.py  control.py  encryption.py  file_manager.py  fun.py  help.py  info.py  keylogger.py  media.py  nuke.py  screenshot.py  shell.py
